updated to java 11
hadoop annotations was using jdk 1.8 tools we are not using hadoop for anything